fix: text-align property of blog-details pre element

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -429,13 +429,14 @@ nav ul li {
 
 .blog__details pre {
   width: 100%;
-  text-align: justify;
-  text-justify: auto;
+  text-align: left;
+  hyphens: auto;
   white-space: pre-wrap; /* CSS3 */
   white-space: -moz-pre-wrap; /* Mozilla */
   white-space: -pre-wrap; /* Opera 4-6 */
   white-space: -o-pre-wrap; /* Opera 7 */
   word-wrap: break-word; /* Internet Explorer 5.5+ */
+  word-break: break-word;
   overflow-wrap: break-word;
   padding: 20px 30px;
   font-size: 1.2rem;
